homelab/juleshuls/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: juleshuls
  labels:
    pod-security.kubernetes.io/enforce: restricted
