homelab/juleshuls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juleshuls
  namespace: juleshuls
spec:
  selector:
    app: juleshuls
  ports:
    - name: http
      port: 80
      targetPort: http
